--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           </div>
           <div class="phone">
             <h3>PHONE</h3>
-            <p>9999969420</p>
+            <p>XXXXX-69420</p>
           </div>
           <div class="email">
             <h3>EMAIL</h3>
